--- a/src/components/Main/components/HomePage/HomePage.css
+++ b/src/components/Main/components/HomePage/HomePage.css
@@ -100,10 +100,16 @@ h3 {
 
 
 
-@media screen and (max-width: 1000px) {
-    .column {
-        width: 100%;
-        display: block;
-        margin-bottom: 20px;
+@media screen and (max-width: 850px) {
+    .card{
+        width: 15em;
+        height: 30em;
+        border: 1px solid #eaeaea;
+        padding: 10px;
+        margin-left: -5em !important;
+       
+    }
+    .Merg{
+        padding: 230em;
     }
 }
